# VK_C_Homeworks

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md  a.out  main.c  test  test.cpp  test.txt
.circleci/: config.yml
.github/workflows/: ci.yml
book_catalog_lib/: CMakeLists.txt  book.c  book.h  book_catalog.c  book_catalog.h  person.c  person.h  utilities.c  utilities.h  utils.c  utils.h
include/: book.h  book_catalog.h
lib/: CMakeLists.txt  ECG.c  ECG.h  lib.h  lib_parallel.c  lib_static.c
lib/utils/: utilities.c  utilities.h
src/: book.c  book_catalog.c  catalog.txt  main.c  person.c
stress_test/: CMakeLists.txt  main.c  static_stress.c  stress_test.c  stress_test.h
unit_test/: CMakeLists.txt  func_test.cpp  functionality_test.cpp  input_test.cpp  parallel_test.cpp  static_test.cpp
unit_test/inputs/: persons_corrected.txt
utils/: CMakeLists.txt  utilities.c  utilities.h
